Fixed scrolling issue on iOS devices, though pure parallax does not work for iOS devices now

--- a/app/forgyftapp/static/stylesheets/default.css
+++ b/app/forgyftapp/static/stylesheets/default.css
@@ -17,8 +17,13 @@ body.default {
     overflow-x: hidden;
     /* Enable scrolling on the page. */
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch !important;
     /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
     perspective: 2px;
+}
+
+.touch {
+    -webkit-overflow-scrolling: touch !important;
 }
 
 .section {
